Saved local changes before pulling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/Home.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    
     <title>Online Store Management System</title>
 </head>
 <body>
@@ -176,11 +177,10 @@
         </div>
     </main>
     <footer>
-        <span class="Up">
+        <span class="Up" id="scrollUp">
         <i class="fa-solid fa-chevron-up"></i>
         </span>
         <div class="Foot-container">
-           
         </div>
     </footer>  
 </body>
